# Signal-Message-Backup-Tests

./: .editorconfig  .gitignore  Backup.proto  Cargo.toml  README.md  build.gradle.kts  generate-binprotos.zsh  gradle.properties  settings.gradle.kts
.github/workflows/: main.yml
converter/: Cargo.toml  build.rs
converter/src/: lib.rs  parse.rs  proto.rs
converter/src/proto/: backup.proto
scripts/: generate-base64-bytes.sh  generate-base64-uuid.sh  generate-binprotos.sh  generate-single-binproto.sh
src/main/kotlin/: Main.kt  Util.kt  (+5 more)
test-cases/: account-data.binproto  account-data.jsonproto  account_data_00.binproto  account_data_00.txtproto  account_data_01.binproto  account_data_01.txtproto  account_data_02.binproto  account_data_02.txtproto  account_data_03.binproto  account_data_03.txtproto  account_data_04.binproto  account_data_04.txtproto  account_data_05.binproto  account_data_05.txtproto  account_data_06.binproto  account_data_06.txtproto  account_data_07.binproto  account_data_07.txtproto  account_data_08.binproto  account_data_08.txtproto  account_data_09.binproto  account_data_09.txtproto  account_data_10.binproto  account_data_10.txtproto  account_data_11.binproto  account_data_11.txtproto  account_data_12.binproto  account_data_12.txtproto  account_data_13.binproto  account_data_13.txtproto  account_data_14.binproto  account_data_14.txtproto  account_data_15.binproto  account_data_15.txtproto  account_data_16.binproto  account_data_16.txtproto  account_data_17.binproto  account_data_17.txtproto  account_data_18.binproto  account_data_18.txtproto  (+1097 more)
(+52 files in other folders)
