#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#
[package]
name = "libsignal-message-backup-io"
version = "0.1.0"
edition = "2021"
authors = ["Signal Messenger LLC"]
license = "AGPL-3.0-only"

default-run = "json_to_binproto"

[[bin]]
name = "json_to_binproto"

[[bin]]
name = "binproto_to_json"

[dependencies]
arrayvec = "0.7.4"
assert_matches = "1.5.0"
clap = { version = "4.2.1", features = ["derive"] }
clap-stdin = "0.3.0"
displaydoc = "0.2.4"
futures = "0.3.29"
protobuf = "3.3.0"
protobuf-json-mapping = "3.3.0"
serde_json = "1.0"
thiserror = "1.0.50"

[build-dependencies]
protobuf = "3.3.0"
protobuf-codegen = "3.3.0"
